test/expected/typedef_si.out
typedef static int SI
               ^
16: error: "typedef static int" is illegal for built-in type
